# fastapi-base

./: .cursorignore  .dockerignore  .env.exmple  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  test.http
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  config.py  dependencies.py  main.py  middleware.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  health.py  users.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  user.py
app/middleware/: __init__.py  logging.py  timing.py
app/routes/: __init__.py  tenant.py
app/schemas/: user.py
app/services/: user_service.py
app/utils/: helpers.py
scripts/: README.md  create_user.py  generate_secret_key.py  init_db.py
src/: get_public_ip.py
src/db/: __init__.py  mongodb.py
src/models/: tenant.py  token.py
test/: conftest.py  test_db.py  test_tenant_api.py
tests/: __init__.py  conftest.py  test_health.py  test_users.py
